--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
                         </div>
                         <ul>
                             <li class="active"><a href=""> HOME</a> </li>
-                            <li><a href=""> HOME</a> </li>
-                            <li><a href=""> HOME</a> </li>
-                            <li><a href=""> HOME</a> </li>
-                            <li><a href=""> HOME</a> </li>
-                            <li><a href=""> HOME</a> </li>
+                            <li><a href="">HOME</a> </li>
+                            <li><a href="">PROJECTS</a> </li>
+                            <li><a href="">NEWS</a> </li>
+                            <li><a href="">VIDEOS</a> </li>
+                            <li><a href="">CONTACT</a> </li>
                         </ul>
                     </nav>
                 </div>
